--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node index.js",
     "patch-release": "npm version patch && npm publish && git push --follow-tags && git push --tags",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
